fix carousel overflow

--- a/style.scss
+++ b/style.scss
@@ -1165,6 +1165,7 @@ canvas {
   .swiper-container {
     max-width: 1000px;
     margin: 0 auto;
+    overflow: hidden;
 
     .swiper-wrapper {
       display: flex;
